fixing spacing on stream buttons

--- a/cherry/src/app/dialogs/streammodal/streammodal.component.scss
+++ b/cherry/src/app/dialogs/streammodal/streammodal.component.scss
@@ -14,4 +14,5 @@
     font-size: 12pt;
     line-height: 1;
     white-space: pre-wrap;
+    margin-top: 15px;
 }
